favorite stars yellow, spacing fix (temp?)

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -132,6 +132,11 @@ input.pantryTextBox:focus{
 	color: rgb(170, 170, 170);
 }
 
+.unfav-color {
+	color: gold
+}
+
+
 .expand-text{
 	color: rgb(120, 120, 120);
 	text-align: center;
@@ -202,6 +207,10 @@ input.pantryTextBox:focus{
 	color: gold;
 }
 
+.unfavButton:hover {
+	color: rgb(170, 170, 170);
+}
+
 .favoritesContainer {
 	border: 1px solid #d0d0d0;
 	border-radius: 4px;
@@ -218,12 +227,14 @@ input.pantryTextBox:focus{
 .favorites {
 	display: flex;
 	flex-wrap: wrap;
+	justify-content: space-between;
 }
 
 .favoriteCard {
 	border-radius: 4px;
 	border: 1px solid #d0d0d0;
-	width: 300px;
+	/* width: 275px; */
+	width: 45%;
 	margin: 10px;
 }
 
